--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <h1>Hello</h1>
+    <h2>World</h2>
+    <h3>Select an element</h3>
+    <h4>Add a name associated with the selector for that element</h4>
 </html>
